<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kanken/News Flashcard</string>
    <string name="welcome">Enter quiz settings.</string>
    <string name="button_start_quiz">Play</string>
    <string name="button_show_directions">Help</string>
    <string name="button_show_terms_of_usage">Terms of Usage</string>
    <string name="label_quiz_level">Difficulty Level</string>
    <string name="label_quiz_topics">News Topics</string>
    <string name="button_select_topics">Select...</string>
    <string name="label_quiz_type">Type of Problems</string>
    <string name="label_quiz_type_reading">Reading</string>
    <string name="label_quiz_type_writing">Writing</string>
    <string name="invoke_chooser" translatable="false">...</string>
    <string name="label_topic_chooser_title">Available topics</string>
    <string name="label_topic_business">Business</string>
    <string name="label_topic_politics">Politics</string>
    <string name="label_topic_sports">Sports</string>
    <string name="label_topic_health_medicine">Health - Medicine</string>
    <string name="label_topic_culture_arts">Culture - Arts</string>
    <string name="label_topic_science_education">Science - Education</string>
    <string name="label_topic_home_living">Home - Living</string>
    <string name="label_topic_other">Other</string>
    <string name="label_topic_all">All</string>
    <string name="label_topic_all_unselect">Deslect All</string>
    <string name="label_topic_business_short">Business</string>
    <string name="label_topic_politics_short">Politics</string>
    <string name="label_topic_sports_short">Sports</string>
    <string name="label_topic_health_medicine_short">Health/Med.</string>
    <string name="label_topic_culture_arts_short">Cult./Arts</string>
    <string name="label_topic_science_education_short">Sci./Edu.</string>
    <string name="label_topic_home_living_short">Home/Liv.</string>
    <string name="label_topic_other_short">Other</string>
    <string name="label_topic_all_short">All</string>
    <string name="label_topic_all_unselect_short">Deselect All</string>
    <string name="button_select">Select</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="error_no_topics_selected_title">No topics selected.</string>
    <string name="error_no_topics_selected_msg">The quiz cannot start because no topics are selected.</string>
    <string name="error_empty_answer_title">No answer provided.</string>
    <string name="error_not_enough_problems_found_title">Not enough problems found.</string>
    <string name="error_not_enough_problems_found_msg">The system is running out of problems for the selected topics and level. Select additional topics or change level, then try again. \n\nIf the problem persists, try again tomorrow.</string>
    <string name="button_continue">Continue</string>
    <string name="error_empty_answer_msg">The answer field is blank. This will be interpreted as if you do not know the answer to the problem.</string>
    <string name="error_server_unreachable_title">The server is unreachable.</string>
    <string name="error_server_unreachable_msg">The application cannot contact the server.\n\nMake sure that your network connection is running properly.\n\nIf the problem persists, try later.\n\nSorry for the inconvenience.</string>
    <string name="error_server_unreachable_try_again_msg">The application cannot contact the server.\n\nMake sure that your network connection is running properly.\n\n</string>
    <string name="try_again">Try again</string>
    <string name="error_client_too_old_title">The client is obsolete.</string>
    <string name="error_client_too_old_msg">The version of the application is too old.\n\nPlease install latest version to connect to the server.</string>
    <string name="label_problem_info_level">Lvl %1$d</string>
    <string name="label_problem_info_topic">%1$s</string>
    <string name="label_problem_info_type">%1$s</string>
    <string name="label_problem_number">%1$d/%2$d</string>
    <string name="label_answer">Your answer</string>
    <string name="button_validate_answer">⏎</string>
    <string name="button_delete_kanji">⌫</string>
    <string name="button_prev_kanjis">▲</string>
    <string name="button_next_kanjis">▼</string>
    <string name="button_delete_kana">⌫</string>
    <string name="label_problem_eval_title">Evaluation</string>
    <string name="label_evaluation_answer">Your answer</string>
    <string name="label_evaluation_right_answer">The right answer</string>
    <string name="label_right_answer_1">Right!</string>
    <string name="label_right_answer_2">That\'s correct!</string>
    <string name="label_right_answer_3">Good job!</string>
    <string name="label_right_answer_4">Well done!</string>
    <string name="label_right_answer_5">Very good!</string>
    <string name="label_wrong_answer_1">Wrong!</string>
    <string name="label_wrong_answer_2">That\'s incorrect!</string>
    <string name="label_wrong_answer_3">Sorry!</string>
    <string name="label_wrong_answer_4">Oops!</string>
    <string name="label_wrong_answer_5">That is not right.</string>
    <string name="label_detailed_answer_right">%1$s = %2$s</string>
    <string name="label_detailed_answer_wrong">%1$s ≠ %2$s\n\n%1$s = %3$s</string>
    <string name="button_report_error">Report the problem as incorrect</string>
    <string name="label_enter_problem_familiarity">Please indicate when you have understood and started to use a word in your native language corresponding to \"%1$s\". (ES: Elem. School; HS: High School)</string>
    <string name="label_familiarity_0">I don\'t know this Japanese word</string>
    <string name="label_familiarity_1">Before ES</string>
    <string name="label_familiarity_2">ES (lower)</string>
    <string name="label_familiarity_3">ES (higher)</string>
    <string name="label_familiarity_4">Jr. HS or later</string>
    <string name="label_familiarity_long_0">I don\'t know this Japanese word</string>
    <string name="label_familiarity_long_1">Before elementary school</string>
    <string name="label_familiarity_long_2">Elementary School (lower grades)</string>
    <string name="label_familiarity_long_3">Elementary School (higher grades)</string>
    <string name="label_familiarity_long_4">Junior High School or later</string>
    <string name="button_next">Next</string>
    <string name="info_confirm_report_title">Reporting incorrect problem...</string>
    <string name="info_confirm_report_msg">If you believe that there is something wrong with the problem, whether the statement looks funny or the right answer seems incorrect or for any other reasons, you can report the problem as faulty.</string>
    <string name="button_report">Report</string>
    <string name="info_report_title">Thank you!</string>
    <string name="info_report_msg">We will review the problem and fix it if it\'s appropriate.\n\nYour feedback is very appreciated.</string>
    <string name="label_summary_title">Quiz Summary</string>
    <string name="label_summary_problem">Problem %1$d</string>
    <string name="label_summary_statement">Statement</string>
    <string name="label_summary_user_answer">Your answer</string>
    <string name="label_summary_right_answer">Correct answer</string>
    <string name="label_summary_outcome">Outcome</string>
    <string name="label_summary_familiarity">Since when the word has been learned/used</string>
    <string name="label_summary_reported">Reported as Incorrect!</string>
    <string name="button_leave_summary">Start another quiz</string>
    <string name="label_finding_characters">Finding matching characters...</string>
    <string name="button_signout">Sign out</string>
    <string name="button_play">Play</string>
    <string name="label_signing_in">Signing in...</string>
    <string name="label_signing_out">Signing out...</string>
    <string name="label_authentication">Please authenticate yourself with your Google account before using the application.</string>
    <string name="label_fetching_quiz_data">Fetching quiz data...</string>
    <string name="label_fetching_data">Fetching data...</string>
    <string name="label_sending_results_data">Sending results data...</string>
    <string name="warning_cancel_quiz_title">Terminate the quiz?</string>
    <string name="warning_cancel_quiz_msg">Do you want to terminate the current quiz and go back to the main settings page?</string>
    <string name="button_terminate">Terminate</string>
    <string name="search_engine_url" translatable="false">https://www.google.com/search?q=%1$s</string>
    <string name="link_directions" translatable="false">https://lotus.kuee.kyoto-u.ac.jp/kanken_to_news/howto.html</string>
    <string name="link_terms_of_usage" translatable="false">https://lotus.kuee.kyoto-u.ac.jp/kanken_to_news/terms.html</string>
    <string name="link_kanken" translatable="false">https://www.kanken.or.jp/</string>
    <string name="link_kyoto_university">https://www.kyoto-u.ac.jp/en/</string>
    <string name="link_yomiuri" translatable="false">https://www.yomiuri.co.jp/</string>
    <string name="btn_next_items">別の候補を表示▼</string>
    <string name="nothing_familiarity" translatable="false">---</string>
    <string name="loading" translatable="false">Now Loading...</string>
    <string name="results_history_header_date">Date</string>
    <string name="results_history_header_reading">Reading</string>
    <string name="results_history_header_writing">Writing</string>
    <string name="results_history_header_total">Totals</string>
    <string name="results_history_period_last_week">Last week</string>
    <string name="results_history_period_last_month">Last month</string>
    <string name="results_history_graphic_view_legend_rights">Rights</string>
    <string name="results_history_graphic_view_legend_wrongs">Wrongs</string>
    <string name="results_history_errors_problem_type_reading">Reading Problem</string>
    <string name="results_history_errors_problem_type_writing">Writing Problem</string>
    <string name="results_history_errors_header_date">Date</string>
    <string name="results_history_errors_header_problem">Problem</string>
    <string name="results_history_errors_header_user_answer">Your answer</string>
    <string name="results_history_errors_header_right_answer">Right answer</string>
    <string name="dialog_quit_msg">Before quitting the application...</string>
    <string name="warning_quit_before_answering_title">Do you want to quit the application right away?</string>
    <string name="warning_quit_before_answering_msg">Do you want to quit the application right away?</string>
    <string name="button_quit">Quit</string>
    <string name="label_no_data">No data</string>
</resources>
