<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizSettingsActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/welcome"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/layoutQuizLevel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewQuizLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/label_quiz_level" />

            <SeekBar
                android:id="@+id/seekBarQuizLevel"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="13"
                android:progress="5" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutQuizTopics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutQuizTopicsSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewQuizTopics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:text="@string/label_quiz_topics" />

                <Button
                    android:id="@+id/buttonQuizTopicsSelector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="invokeTopicChooser"
                    android:text="@string/invoke_chooser" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewSelectedTopics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:textColor="?attr/colorControlActivated"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutQuizType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewQuizType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_quiz_type" />

            <RadioGroup
                android:id="@+id/radioGroupQuizType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp">

                <RadioButton
                    android:id="@+id/radioButtonQuizTypeReading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/label_quiz_type_reading" />

                <RadioButton
                    android:id="@+id/radioButtonQuizTypeWriting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_quiz_type_writing" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/buttonStartQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:onClick="startQuiz"
            android:text="@string/button_start_quiz" />

        <Button
            android:id="@+id/buttonShowDirections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:onClick="showDirections"
            android:text="@string/button_show_directions" />

        <Button
            android:id="@+id/buttonShowTermsOfUsage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showTermsOfUsage"
            android:text="@string/button_show_terms_of_usage" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>