<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ErrorResultsHistoryFragment">

    <RadioGroup
        android:id="@+id/radioGroupProblemType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonProblemTypeReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/results_history_errors_problem_type_reading" />

        <RadioButton
            android:id="@+id/radioButtonProblemTypeWriting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/results_history_errors_problem_type_writing" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayoutHeaders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FCD86B"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewHeaderDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/results_history_errors_header_date" />

            <TextView
                android:id="@+id/textViewHeaderProblem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/results_history_errors_header_problem" />

            <TextView
                android:id="@+id/textViewHeaderUserAnswer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/results_history_errors_header_user_answer" />

            <TextView
                android:id="@+id/textViewHeaderRightAnswer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/results_history_errors_header_right_answer" />

        </LinearLayout>

        <ListView
            android:id="@+id/listViewResultEntries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            tools:listitem="@layout/view_results_history_error_item">

        </ListView>

    </LinearLayout>


</LinearLayout>

