<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ErrorsHistoryFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutErrorDetailsPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupProblemType">

        <LinearLayout
            android:id="@+id/linearLayoutHeaders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FCD86B"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewHeaderDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/results_history_errors_header_date" />

            <TextView
                android:id="@+id/textViewHeaderProblem"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ECC85B"
                android:padding="10dp"
                android:text="@string/results_history_errors_header_problem" />

            <TextView
                android:id="@+id/textViewHeaderUserAnswer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/results_history_errors_header_user_answer" />

            <TextView
                android:id="@+id/textViewHeaderRightAnswer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ECC85B"
                android:padding="10dp"
                android:text="@string/results_history_errors_header_right_answer" />

        </LinearLayout>


        <ListView
            android:id="@+id/listViewResultEntries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:choiceMode="singleChoice"
            android:listSelector="@color/colorAccent"
            tools:listitem="@layout/view_errors_history_item">

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutErrorDetailsPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonCloseErrorDetailsPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewProblemLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:id="@+id/textViewProblemTopic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewUserAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:id="@+id/textViewProblemAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

        </LinearLayout>

        <jp.kyoto.nlp.kanken.SpecifyFontTextView
            android:id="@+id/problemStatement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="ここにたくさんてきすとが表示されるとテキストサイズが自動的に小さくなるしくみですよ"
            android:textSize="@dimen/summary_statement_text"
            app:autoSizeMaxTextSize="@dimen/summary_statement_text_max"
            app:autoSizeMinTextSize="@dimen/summary_statement_text_min"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupProblemType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonProblemTypeReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/results_history_errors_problem_type_reading" />

        <RadioButton
            android:id="@+id/radioButtonProblemTypeWriting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:checked="false"
            android:text="@string/results_history_errors_problem_type_writing" />

    </RadioGroup>


</android.support.constraint.ConstraintLayout>

